apps/workload/bookinfo/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfox
  labels:
    istio-discovery: enabled
    istio-injection: enabled
