apps/workload/bookinfo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-gateway
spec:
  port:
    targetPort: http
  to:
    kind: Service
    # Auto-provisioned by the Gateway API `Gateway/bookinfo-gateway` resource
    # (see bookinfo-gateway.yaml pulled in via base/kustomization.yaml):
    # Istio names it "<gateway name>-<gatewayClassName>".
    name: bookinfo-gateway-istio
    weight: 100
  wildcardPolicy: None
